manifests/papermc/all.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: papermc
  labels:
    app: papermc
    type: paper
spec:
  serviceName: papermc
  replicas: 1
  selector:
    matchLabels:
      app: papermc
      type: paper
  template:
    metadata:
      labels:
        app: papermc
        type: paper
    spec:
      containers:
        - name: papermc
          image: lexfrei/papermc:1.21.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25565
              protocol: TCP
              name: minecraft-tcp
            - containerPort: 25565
              protocol: UDP
              name: minecraft-udp
            - containerPort: 8123
              protocol: TCP
              name: dynmap
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "6G"
              cpu: "2000m"
            limits:
              memory: "6G"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: papermc
  labels:
    app: papermc
    type: paper
  annotations:
    metallb.io/address-pool: minecraft-pool
spec:
  type: LoadBalancer
  ports:
    - port: 25565
      targetPort: minecraft-tcp
      protocol: TCP
      name: minecraft-tcp
    - port: 25565
      targetPort: minecraft-udp
      protocol: UDP
      name: minecraft-udp
    - port: 8123
      targetPort: dynmap
      protocol: TCP
      name: dynmap
  selector:
    app: papermc
    type: paper
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel

    external-dns.alpha.kubernetes.io/target: "4a0cf464-58f0-4d24-87cd-e87ad3c0a136.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: map.lex.la
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: papermc
                port:
                  name: dynmap
